# noticube

./: .dockerignore  .gitignore  Cargo.toml  Makefile  README.md
kubernetes/: deployment.yaml
script/: Dockerfile  cargo_doc.sh
scripts/: Dockerfile  build_docker_local.sh  check_sending_mail.sh
src/: client.rs  env.rs  lib.rs  main.rs  server.rs
src/client/: slack.rs
src/server/: smtp.rs
systemd/etc/: noticube-credentials
systemd/system/: noticube.service
