[package]
name = "noticube"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0"
anyhow = "1.0"
mailin-embedded = "0.8"
tokio = { version = "1.38", default-features = false, features = ["macros", "rt-multi-thread", "signal"] }
strum = { version = "0.26", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
reqwest-middleware = { version = "0.3", features = ["json"] }
reqwest-retry = "0.5"
reqwest-tracing = "0.5"
url = "2.5"
envy = "0.4"
